// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`\`<SliderInput />\` formats the value using to the given formatter 1`] = `
<div>
  <div>
    <label
      for="test-input"
    >
      Test Input
    </label>
    <input
      id="test-input"
      max="10"
      min="0"
      step="0.1"
      type="range"
      value="0.6732"
    />
    <p>
      Min: 
      fake formatted value
    </p>
    <p>
      Max: 
      fake formatted value
    </p>
    <p>
      Value: 
      <output
        for="test-input"
      >
        fake formatted value
      </output>
    </p>
  </div>
</div>
`;

exports[`\`<SliderInput />\` renders correctly based on the value returned by the selector 1`] = `
<div>
  <div>
    <label
      for="test-subject-angle"
    >
      Test Subject - Angle
    </label>
    <input
      id="test-subject-angle"
      max="0.744"
      min="0.422"
      step="0.001"
      type="range"
      value="0.9316"
    />
    <p>
      Min: 
      0.422
    </p>
    <p>
      Max: 
      0.744
    </p>
    <p>
      Value: 
      <output
        for="test-subject-angle"
      >
        0.9316
      </output>
    </p>
  </div>
  <div>
    <label
      for="test-subject-translation"
    >
      Test Subject - Translation
    </label>
    <input
      id="test-subject-translation"
      max="0.562"
      min="0.824"
      step="0.001"
      type="range"
      value="0.1256"
    />
    <p>
      Min: 
      0.824
    </p>
    <p>
      Max: 
      0.562
    </p>
    <p>
      Value: 
      <output
        for="test-subject-translation"
      >
        0.1256
      </output>
    </p>
  </div>
</div>
`;

exports[`\`<SliderInput />\` responds correctly to a change event 1`] = `
<div>
  <div>
    <label
      for="test-input"
    >
      Test Input
    </label>
    <input
      id="test-input"
      max="10"
      min="0"
      step="0.1"
      type="range"
      value="0.5582"
    />
    <p>
      Min: 
      0
    </p>
    <p>
      Max: 
      10
    </p>
    <p>
      Value: 
      <output
        for="test-input"
      >
        0.5582
      </output>
    </p>
  </div>
</div>
`;
